--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,18 @@
         <link rel="icon" type="image" href="images/nrk0.jpg">
         <link rel="stylesheet" href="style.css">
 
-        <meta name="google-adsense-account" content="ca-pub-6203514041784698">
+        <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-BJXJFY55LB"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-BJXJFY55LB');
+</script>
+
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6203514041784698"
+     crossorigin="anonymous"></script>
     </head>
     <body class="contact">   
         
