--- a/products.html
+++ b/products.html
@@ -8,7 +8,18 @@
         <link rel="icon" type="image" href="images/nrk0.jpg">
         <link rel="stylesheet" href="style.css">
 
-        <meta name="google-adsense-account" content="ca-pub-6203514041784698">
+        <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-BJXJFY55LB"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-BJXJFY55LB');
+</script>
+
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6203514041784698"
+     crossorigin="anonymous"></script>
     </head>
     <body class="products">
         
@@ -35,46 +46,46 @@
 <!--image containers------------>
     <div class="image-container">
       <a href="images/bizlo1.jpg">
-      <img src="images/bizlo1.jpg" alt="1" width="500">
+      <img src="images/bizlo1.jpg" alt="1">
       </a>
       <a href="images/bizlo2.jpeg">
-      <img src="images/bizlo2.jpeg" alt="2" width="500">
+      <img src="images/bizlo2.jpeg" alt="2">
       </a>
     </div>
     
     <div class="image-container">
       <a href="images/bizlo3.jpeg">
-      <img src="images/bizlo3.jpeg" alt="3" width="500">
+      <img src="images/bizlo3.jpeg" alt="3">
       </a>
       <a href="images/Bizlo4.jpeg">
-      <img src="images/Bizlo4.jpeg" alt="4" width="500">
+      <img src="images/Bizlo4.jpeg" alt="4">
       </a>
     </div>
 
     <div class="image-container">
         <a href="images/bizlo5.jpeg">
-        <img src="images/bizlo5.jpeg" alt="5" width="500">
+        <img src="images/bizlo5.jpeg" alt="5">
         </a>
         <a href="images/bizlo6.jpeg">
-        <img src="images/bizlo6.jpeg" alt="6" width="500">
+        <img src="images/bizlo6.jpeg" alt="6">
         </a>
     </div>
 
     <div class="image-container">
         <a href="images/bizlo7.jpeg">
-        <img src="images/bizlo7.jpeg" alt="7" width="500">
+        <img src="images/bizlo7.jpeg" alt="7">
         </a>
         <a href="images/bizlo8.jpeg">
-        <img src="images/bizlo8.jpeg" alt="8" width="500">
+        <img src="images/bizlo8.jpeg" alt="8">
         </a>
     </div>
 
     <div class="image-container">
         <a href="images/bizlo9.jpeg">
-        <img src="images/bizlo9.jpeg" alt="9" width="500">
+        <img src="images/bizlo9.jpeg" alt="9">
         </a>
         <a href="images/bizlo10.jpeg">
-        <img src="images/bizlo10.jpeg" alt="10" width="500">
+        <img src="images/bizlo10.jpeg" alt="10">
         </a>
     </div>
 
@@ -85,64 +96,64 @@
 
     <div class="image-container">
         <a href="images/gamelo1.jpeg">
-        <img src="images/gamelo1.jpeg" alt="11" width="500">
+        <img src="images/gamelo1.jpeg" alt="11">
         </a>
         <a href="images/gamelo2.jpeg">
-        <img src="images/gamelo2.jpeg" alt="12" width="500">
+        <img src="images/gamelo2.jpeg" alt="12">
         </a>
     </div>
 
     <div class="image-container">
         <a href="images/gamelo3.jpeg">
-        <img src="images/gamelo3.jpeg" alt="13" width="500">
+        <img src="images/gamelo3.jpeg" alt="13">
         </a>
         <a href="images/gamelo4.jpeg">
-        <img src="images/gamelo4.jpeg" alt="14" width="500">
+        <img src="images/gamelo4.jpeg" alt="14">
         </a>
     </div>
 
     <div class="image-container">
         <a href="images/gamelo5.jpeg">
-        <img src="images/gamelo5.jpeg" alt="15" width="500">
+        <img src="images/gamelo5.jpeg" alt="15">
         </a>
         <a href="images/gamelo6.jpeg">
-        <img src="images/gamelo6.jpeg" alt="16" width="500">
+        <img src="images/gamelo6.jpeg" alt="16">
         </a>
     </div>
 
     <div class="image-container">
         <a href="images/gamelo7.jpeg">
-        <img src="images/gamelo7.jpeg" alt="17"width="500">
+        <img src="images/gamelo7.jpeg" alt="17">
         </a>
         <a href="images/gamelo8.png">
-        <img src="images/gamelo8.png" alt="18" width="500">
+        <img src="images/gamelo8.png" alt="18">
         </a>
     </div>
 
     <div class="image-container">
         <a href="images/gamelo9.jpeg">
-        <img src="images/gamelo9.jpeg" alt="19" width="500">
+        <img src="images/gamelo9.jpeg" alt="19">
         </a>
         <a href="images/gamelo10.jpeg">
-        <img src="images/gamelo10.jpeg" alt="20" width="500">
+        <img src="images/gamelo10.jpeg" alt="20">
         </a>
     </div>
 
     <div class="image-container">
         <a href="images/gamelo11.jpeg">
-        <img src="images/gamelo11.jpeg" alt="21" width="500">
+        <img src="images/gamelo11.jpeg" alt="21">
         </a>
         <a href="images/gamelo12.jpeg">
-        <img src="images/gamelo12.jpeg" alt="22" width="500">
+        <img src="images/gamelo12.jpeg" alt="22">
         </a>
     </div>
 
     <div class="image-container">
         <a href="images/gamelo13.jpeg">
-        <img src="images/gamelo13.jpeg" alt="23" width="500">
+        <img src="images/gamelo13.jpeg" alt="23">
         </a>
         <a href="images/gamelo14.jpeg">
-        <img src="images/gamelo14.jpeg" alt="24" width="500">
+        <img src="images/gamelo14.jpeg" alt="24">
         </a>
     </div>
 
