--- a/index.html
+++ b/index.html
@@ -18,8 +18,12 @@
   gtag('config', 'G-BJXJFY55LB');
 </script>
 
+     <!--adsense-->
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6203514041784698"
      crossorigin="anonymous"></script>
+     
+     <!--fore media-->
+     <script type="text/javascript" async src="https://platform.foremedia.net/code/54874/analytics"></script>
     </head>
     <body class="index">
         
