--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
         <script type='text/javascript' src='//pl24606745.cpmrevenuegate.com/00/9d/3e/009d3e0581f9a37380bf7ae79f94f474.js'></script>
     </head>
-    <body>
+    <body class"index">
         <script type='text/javascript' src='//pl24606812.cpmrevenuegate.com/0c/dd/5c/0cdd5c66b265f0be3ad5eb0457ab5254.js'></script>
 <!--header and navigationbar------------>
     <header>
